2004-06-30  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-css.h: Fix bug #145173
	* rsvg-filter.c: Ditto
	* rsvg-mask.c: Ditto
	* rsvg-private.h: Ditto
	* rsvg-styles.h: Ditto
	* test-display.c: Ditto

2004-06-29  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-filter.c: "Fix" bug #145149
	
2004-06-21  Dom Lachiwicz <cinamod@hotmail.com>

	* configure.in: Fix bug #137934
	
2004-06-18  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.c: Beginnings of <switch> support
	* rsvg-cond.c, rsvg-private.h, rsvg-shapes.c, rsvg-styles.c,
	rsvg-styles.h: Ditto
	
2004-06-17  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-css.c (rsvg_css_parse_list): Fix memory leak
	(rsvg_css_parse_aspect_ratio): Better detection code
	* rsvg-cond.c: New file; meant to evaluate <switch> statement conditions
	* rsvg-styles.c, rsvg-text.c: Work on text's unicode-bidi and direction attributes
	
2004-06-14  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-text.c: Removed old text harness, replaced entirely with vector
	text.
	
2004-06-15  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-text.c, rsvg-text-vectors.c: well, um, I've been doing a fair bit of tweaking. Mainly very late at night so my memory of it is far from complete.

2004-06-13  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-shapes.c: Implemented markers for straight lines
	
2004-06-10  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-css.c: Parse preserveAspectRatio
	* rsvg-shapes.c: Honor preserveAspectRatio to some extent, 
	honor base URIs
	* rsvg-filter.c: Honor base URIs
	* moz-plugin/moz-plugin.c: Grab the SVG's URI
	* rsvg.[ch]: Place to hang the SVG's base URI
	* test-display.c: Accept the SVG's base URI as a param
	
2004-06-10  Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-filter.c: fixed overlay filter
	* rsvg-styles.c: reenabled a:adobe-blending-mode

2004-06-09  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-styles.c (rsvg_viewport_percentage): Fix